--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ed Adams, website developer and designer.</title>
+    <title>Ed Adams: Website design & development</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Leamington Spa-based web designer and developer with 7 years of experience building gorgeous websites at affordable prices." />
-    <meta name="keywords" content="website,developer,designer,tumblr themes,web designer leamington,web design west midlands,responsive web design birmingham" />
+    <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over five years experience in all things website related." />
     <link rel="stylesheet" href="css/application.css" />
-    <script src="//use.edgefonts.net/lato:n4,i4,n7,i7.js"></script>
+    <script data-cfasync="false" src="//use.edgefonts.net/lato:n4,i4,n7,i7.js"></script>
   </head>
   <body class="home">
     <header class="header">
@@ -35,15 +34,6 @@
         <li class="work-item work-item-pre" style="font-size: 1.25em;">
           <p>I've recently worked on several exciting new projects. I designed and developed a complete overhaul of <a href="http://warwickboats.co.uk" target="_new">Warwick Boats</a>, worked with DSC to produce&nbsp;<a href="http://chimeadvisors.com" target="_new">Chime Advisors</a>, and have lots more to show soon.</p>
         </li>
-<!--        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/excellenceaviation_1x.png" alt="Excellence Aviation web site design" />
-          </div>
-          <h3 class="work-project-title">Excellence Aviation <a class="work-view-btn" href="http://excellence-aviation.com" target="_blank">View</a></h3>
-          <p class="work-role">Responsive site design &amp; development, SEO, WordPress CMS, blog integration</p>
-          <p class="work-desc">I took on Excellence Aviation's old website, thoroughly modernising and optimising it. I helped design marketing materials for their new flagship product and ensured their Google Search rank was as good as could be. I recently got done with a full WordPress upgrade of this site, giving them full control to edit the site's content.</p>
-        </li> -->
         <li class="work-item">
           <div class="work-screenshot">
             <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
@@ -137,14 +127,14 @@
               </svg>
             </a>
           </li>
-          <li>
+          <!--<li>
             <a href="https://dribbble.com/edadams" target="_new">
               <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="social-icon social-icon-dribbble">
                 <title>Dribbble</title>
                 <path class="dribbble-path1" d="M765.666 226.346c-6.882 9.804-64.486 87.23-200.556 138.228-62.704-115.206-132.206-209.85-142.782-224.012 28.776-6.936 58.798-10.64 89.674-10.64 97.23 0 186.088 36.47 253.664 96.424zM538.752 515.924c-197.352 63.796-302.372 237.678-311.042 252.522-61.116-67.842-98.374-157.576-98.374-255.858 0-3.916 0.078-7.81 0.196-11.696 16.744 0.342 202.18 2.732 393.278-54.458 10.952 21.44 21.416 43.202 31.024 64.94-5.064 1.426-10.092 2.94-15.082 4.55zM512 0c-282.77 0-512 229.23-512 512s229.23 512 512 512 512-229.23 512-512-229.23-512-512-512zM512.002 960c-247.030 0-448.002-200.97-448.002-448 0-247.028 200.972-448 448.002-448 247.032 0 447.998 200.972 447.998 448 0 247.030-200.966 448-447.998 448zM619.918 476.902c-7.946-18.66-16.482-37.198-25.388-55.428 141.484-57.762 205.61-139.964 213.676-150.878 53.292 65.116 85.566 148.052 86.412 238.372-12.618-2.668-139.13-28.328-266.458-12.316-2.682-6.552-5.426-13.134-8.242-19.75zM491.188 387.588c-178.996 47.532-336.65 46.848-353.766 46.622 24.814-118.742 104.836-217.432 211.892-267.926 10.088 13.834 78.472 108.594 141.874 221.304zM577.32 575.5c0.84-0.292 1.68-0.564 2.522-0.852 53.724 139.606 75.942 256.612 81.636 290.186-45.946 19.568-96.466 30.41-149.476 30.41-88.464 0-170.002-30.184-234.882-80.78 6.886-14.078 84.364-163.754 300.2-238.964zM651.464 556.964c119.916-19.192 225.266 12.232 238.36 16.36-17.060 106.474-78.172 198.428-164.020 256.472-3.922-23.276-24.288-135.294-74.34-272.832z"></path>
               </svg>
             </a>
-          </li>
+          </li>-->
           <li>
             <a href="https://twitter.com/edadams_" target="_new">
               <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="social-icon social-icon-twitter">
