Add privacy policy, css

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,29 +3,7 @@
   <head>
     <title>Privacy Policy for Ed Adams (edadams.io)</title>
     <meta charset="utf-8">
-    <style>
-      .pp-simple {
-        padding: 18px 20px;
-        border: 1px solid #007faa;
-        margin-bottom: 1em;
-      }
-
-      .pp-simple p {
-        margin-top: 0;
-      }
-
-      .pp-simple p:last-of-type {
-        margin-bottom: 0;
-      }
-
-      .pp-full {
-        display: none;
-      }
-
-      .pp-full.is-visible {
-        display: block;
-      }
-    </style>
+    <link rel="stylesheet" href="css/pp.css">
   </head>
   <body>
     <h2>Privacy Policy for Ed Adams (edadams.io)</h2>
