--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,7 +10,7 @@
     <div class="pp">
       <h2>Privacy Policy for Ed Adams (edadams.io)</h2>
       <div class="pp-simple">
-        <p><strong>My website does <em>not</em> collect or store any personally idenfitiable information</strong> about you when you use my website.</p>
+        <p><strong>My website does <em>not</em> collect or store any personally identifiable information</strong> about you when you use my website.</p>
 
         <p><strong>My website uses Google Analytics</strong> for completely anonymous usage data, such as: how long you were on my website, the specifications of the device you used, the country you're from using your IP address, and most importantly, <em>if you found my website using any particular search engine keywords</em>, which is especially helpful in marketing.</p>
 
