Privacy policy wording changes

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,17 +10,19 @@
     <div class="pp">
       <h2>Privacy Policy for Ed Adams (edadams.io)</h2>
       <div class="pp-simple">
-        <p><strong>My website does <em>not</em> collect or store any personally identifiable information</strong> about you when you use my website.</p>
+        <p><strong>My website does <em>not</em> collect any personally identifiable information</strong> about you when you use my website.</p>
 
-        <p><strong>My website uses Google Analytics</strong> for completely anonymous usage data, such as: how long you were on my website, the specifications of the device you used, the country you're from using your IP address, and most importantly, <em>if you found my website using any particular search engine keywords</em>, which is especially helpful in marketing.</p>
+        <p><strong>My website uses Google Analytics</strong> for <em>anonymous</em> data, such as: how long you are on my website, specifications of the device you used, country you're in using your IP address, and search engine information (what words you typed to find me).</p>
+        
+        <strong>Google Analytics is an industry-standard tool</strong> in use by the vast majority of websites you visit.</p>
 
-        <p><strong>My website uses cookies</strong>, but only those necessary for Google Analytics. As previously mentioned, these cookies they are completely anonymous. The data collected cannot be used to identify you in any way.</p>
+        <p><strong>My website uses cookies</strong>, but only those necessary for Google Analytics to operate.</p>
 
-        <p><strong>You can contact me</strong> if you have any questions. A button to send me an email is on the page you were just on, or <a href="/#contact">go back</a>.
+        <p><a href="/#contact">Back to my website</a>
       </div>
-      <button class="pp-button">Display full Privacy Policy text</button>
+      <button class="pp-button">Show full Privacy Policy</button>
       <div class="pp-full">
-        <p>Effective date: May 26, 2018</p>
+        <p>Effective as of May 26, 2018</p>
 
         <p>The individual Ed Adams operates <a href="https://edadams.io">the Ed Adams website</a>. In this document, I am referred to as "I", "me". My website is referred to as "my website" or "my service".</p>
 
