more tweaks, it never ends

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,7 +26,7 @@
 
         <p>The individual Ed Adams operates <a href="https://edadams.io">the Ed Adams website</a>. In this document, I am referred to as "I", "me". My website is referred to as "my website" or "my service".</p>
 
-        <p>This page serves to explain to you the collection and use of personal data when you use my website.</p>
+        <p>This page serves to explain to you the collection and use of data when you use my website.</p>
 
         <h4 id="typesofdatacollected">Types of Data Collected</h4>
 
