--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,7 @@
 
         <p><strong>My website uses Google Analytics</strong> for <em>anonymous</em> data, such as: how long you are on my website, specifications of the device you used, country you're in using your IP address, and search engine information (what words you typed to find me).</p>
         
-        <strong>Google Analytics is an industry-standard tool</strong> in use by the vast majority of websites you visit.</p>
+        <strong>Google Analytics is an industry standard tool</strong> in use by the vast majority of websites you visit.</p>
 
         <p><strong>My website uses cookies</strong>, but only those necessary for Google Analytics to operate.</p>
 
