--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,6 +9,7 @@
   <body>
     <div class="pp">
       <h2>Privacy Policy for Ed Adams (edadams.io)</h2>
+      <p><a href="/">Back to my website</a>
       <div class="pp-simple">
         
         <p>My website <strong>does not collect any personally identifiable information</strong> about you.</p>
@@ -18,8 +19,6 @@
         <p>My website uses the <strong>required cookies for Google Analytics</strong> to function correctly.</p>
         
         <p>You <strong>consent to the use of cookies by way of continuing to access my website</strong>, unless you disable them.</p>
-
-        <p><a href="/#contact">Back to my website</a>
       </div>
       <button class="pp-button">Show full Privacy Policy</button>
       <div class="pp-full">
