--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ed Adams: Website design & development</title>
+    <title>Ed Adams: Website design and development</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over five years experience in all things website related." />
@@ -32,7 +32,7 @@
     <section class="section section-work" id="work">
       <ul class="work-list">
         <li class="work-item work-item-pre" style="font-size: 1.25em;">
-          <p>I've recently worked on several exciting new projects. I designed and developed a complete overhaul of <a href="http://warwickboats.co.uk" target="_new">Warwick Boats</a>, worked with DSC to produce&nbsp;<a href="http://chimeadvisors.com" target="_new">Chime Advisors</a>, and have lots more to show soon.</p>
+          <p>I've recently worked on several exciting new projects. I launched <a href="https://walkerbayshop.uk" target="_new">Walker Bay Shop UK</a>, developed a complete overhaul of <a href="http://warwickboats.co.uk" target="_new">Warwick Boats</a>, worked with DSC to produce&nbsp;<a href="http://chimeadvisors.com" target="_new">Chime Advisors</a>, and lots more.</p>
         </li>
         <li class="work-item">
           <div class="work-screenshot">
