--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -97,7 +97,7 @@
 
         <h4 id="onelastthing">One Last Thing...</h4>
 
-        <p>I have made efforts to ensure the accuracy of this Privacy Policy and make sure it's as comprehensive as possible. If something is wrong with this Privacy Policy in any way, or if you have any questions about it, please know that you are welcome to <a href="edadams101+privacypolicy@gmail.com">send me an email</a>.</p>
+        <p>I have made efforts to ensure the accuracy of this Privacy Policy and make sure it's as comprehensive as possible. If something is wrong with this Privacy Policy in any way, or if you have any questions about it, please know that you are welcome to <a href="mailto:edadams101+privacypolicy@gmail.com">send me an email</a>.</p>
       </div>
     </div>
 
