--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Ed Adams: Website design and development</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over five years experience in all things website related." />
+    <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over six years experience in all things website related." />
     <link rel="stylesheet" href="css/application.css" />
-    <script data-cfasync="false" src="//use.edgefonts.net/lato:n4,i4,n7,i7.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans:700" rel="stylesheet">
   </head>
   <body class="home">
     <header class="header">
@@ -31,8 +31,23 @@
 
     <section class="section section-work" id="work">
       <ul class="work-list">
-        <li class="work-item work-item-pre" style="font-size: 1.25em;">
-          <p>I've recently worked on several exciting new projects. I launched <a href="https://walkerbayshop.uk" target="_new">Walker Bay Shop UK</a>, developed a complete overhaul of <a href="http://warwickboats.co.uk" target="_new">Warwick Boats</a>, worked with DSC to produce&nbsp;<a href="http://chimeadvisors.com" target="_new">Chime Advisors</a>, and lots more.</p>
+        <li class="work-item">
+          <div class="work-screenshot">
+            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+            <img class="work-screenshot-img" src="img/walkerbayshop_1x.png" alt="Walker Bay Shop online store home page" />
+          </div>
+          <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
+          <p class="work-role">WooCommerce and WordPress development, all design, online payments support</p>
+          <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the work I did to support paying by credit/debit cards (with Stripe).</p>
+        </li>
+        <li class="work-item">
+          <div class="work-screenshot">
+            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+            <img class="work-screenshot-img" src="img/warwickboats_1x.png" alt="Warwick Boats home page" />
+          </div>
+          <h3 class="work-project-title">Warwick Boats <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
+          <p class="work-role">WordPress development, responsive website design, photo gallery and more</p>
+          <p class="work-desc">Warwick Boats is a boat hire and leisure centre in St Nicks Park, Warwick. For several years I've managed their website and have tutored staff in how to update it themselves effortless with the WordPress content management system.</p>
         </li>
         <li class="work-item">
           <div class="work-screenshot">
