--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leamington Spa, Warwickshire website designer and developer with over six years experience in all things website related." />
     <link rel="stylesheet" href="css/application.css" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans:700" rel="stylesheet">
   </head>
   <body class="home">
     <header class="header">
