--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
             <img class="work-screenshot-img" src="img/warwickboats_1x.png" alt="Warwick Boats home page" />
           </div>
-          <h3 class="work-project-title">Warwick Boats <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
+          <h3 class="work-project-title">Warwick Boat Hire <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
           <p class="work-role">WordPress development, responsive website design, photo gallery and more</p>
-          <p class="work-desc">Warwick Boats is a boat hire and leisure centre in St Nicks Park, Warwick. For several years I've managed their website and have tutored staff in how to update it themselves effortless with the WordPress content management system.</p>
+          <p class="work-desc">Warwick Boat Hire is a boat hire and leisure centre located in St Nicks Park, Warwick. For several years I've managed their website and have guided staff through the process of updating pages themselves with the aid of WordPress.</p>
         </li>
         <li class="work-item">
           <div class="work-screenshot">
