--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
       </div>
     </section>
-
     <section class="section section-work" id="work">
       <ul class="work-list">
         <li class="work-item">
@@ -87,6 +86,83 @@
           <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p>
         </li>
       </ul>
+    </section>
+    
+    <section class="section section-history" id="history" style="display: none;">
+      <div class="history">
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop UK</a>
+            <p class="history-item-description">Current, WordPress, 2018</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://warwickboats.co.uk">Warwick Boats</a>
+            <p class="history-item-description">Current, WordPress, 2018</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://walkerbayshop.uk">E2S</a>
+            <p class="history-item-description">In association with DSC. Current, custom, 2017+</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://walkerbayshop.uk">Starbuck Driving</a>
+            <p class="history-item-description">Current, WordPress, 2017</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://chimeadvisors.com">Chime Advisors</a>
+            <p class="history-item-description">In association with DSC. Current, custom, 2016</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <span class="history-item-title">Excellence Aviation</span>
+            <p class="history-item-description">Previous, PHP, 2016</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://dorightmusic.com">Do Right Music</a>
+            <p class="history-item-description">Current, Tumblr & social media, 2015</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="http://riseandshine.uk.net">Rise & Shine</a>
+            <p class="history-item-description">Current, custom sofware, 2015</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="http://plakiaspanorama.com">Plakias Panorama</a>
+            <p class="history-item-description">Current, WordPress, 2015</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Rotary Club of Broadlands</a>
+            <p class="history-item-description">Current, static content, 2014</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
+            <p class="history-item-description">Current, several iterations and various software solutions, 2014</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <span class="history-item-title">And more...</span>
+            <p class="history-item-description">Not all of my work is listed here, such as projects that were internal or have since ceased operation.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="section section-testimonials" id="testimonials">
