--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="section section-intro" id="intro">
       <div class="intro-wrap">
         <div class="intro-left">
-          <p>Hello, my name is Ed Adams. <strong>I make websites.</strong> From complex web applications that help you run every aspect of your business, to straight forward websites to get your business on the web, I can do it all. Here you can see some of the projects I'm proud to have been a part of, then learn about me straight from the people I've had the pleasure of working with. I'd like to work with you next. Scroll down to learn more.</p>
+          <p>Hello, my name is Ed Adams. <strong>I make websites.</strong> From complex web applications that help you run every aspect of your business, to straight forward websites to get your business on the web, I can do it all. Here you can see some of the projects I'm proud to have been a part of, then learn about me straight from the people I've had the pleasure of working with. I'd like to work with you next.</p>
         </div>
         <div class="intro-right">
           <svg xmlns="http://www.w3.org/2000/svg" class="intro-image-svg" viewBox="465.16 24.156 314.681 284.688"><path d="M551.43 127.083H695.8V31.826H551.43c-1.232 0-2.23 1-2.23 2.234v90.79c-.002 1.23.997 2.233 2.23 2.233zm1.098-91.926h139.945v2.588H552.528v-2.588zm139.944 5.915v82.683H552.526V41.072h139.946z"/><path d="M554.003 35.708c-.466 0-.84.376-.84.84 0 .46.375.838.838.838.465 0 .838-.377.838-.84 0-.462-.375-.838-.84-.838h.005zm3.354 0c-.462 0-.84.376-.84.84 0 .46.38.838.842.838s.838-.377.838-.84c0-.462-.378-.838-.84-.838zm3.356 0c-.462 0-.837.376-.837.84 0 .46.375.838.84.838.46 0 .84-.377.84-.84 0-.462-.377-.838-.84-.838h-.003zm62.42 100.242c-1.34 0-2.426 1.086-2.426 2.428 0 1.34 1.087 2.428 2.427 2.428s2.43-1.088 2.43-2.428c0-1.342-1.087-2.428-2.43-2.428z"/><path d="M663.517 156.476v-2.498h-18.373V145.6h56.563c1.555 0 2.82-1.265 2.82-2.82V26.975c0-1.554-1.267-2.818-2.82-2.818h-158.41c-1.557 0-2.82 1.265-2.82 2.82V142.78c0 1.557 1.266 2.82 2.82 2.82h56.558v8.374h-18.373v2.505H465.16v17.543h113.518v134.82h17.537v-134.82h166.08v134.82h17.546V156.476H663.518zm37.678-128.99v103.47h-157.39V27.485h157.39zM543.805 142.27v-7.985h157.39v7.985h-157.39zm59.382 3.33h38.627v8.374h-38.627V145.6zm173.324 19.647V305.51h-10.884V170.69h-172.74v134.82h-10.88V170.69H468.49v-10.884h308.02v5.443-.003z"/><path d="M465.16 243.096h103.062V184.99H465.16v58.106zm3.33-54.778h96.402v51.447H468.49v-51.447z"/><path d="M504.078 206.01h-3.33v16.065h31.878V206.01h-28.548zm25.22 12.735H504.08v-9.406h25.218v9.405zM465.16 308.84h103.062V250.73H465.16v58.113zm3.33-54.782h96.402v51.45H468.49v-51.453.003z"/><path d="M504.078 271.753h-3.33v16.064h31.878v-16.064h-28.548zm25.22 12.734H504.08v-9.404h25.218v9.404zm70.237-177.312l-23.633-23.633 23.62-23.248-2.33-2.374-26.02 25.602 26.008 26.007 2.355-2.355zm51.77 2.355l26.006-26.007-26.016-25.603-2.334 2.374 23.623 23.248-23.633 23.633 2.354 2.355zm-15.762-49.737l-3.033-1.372-21.995 48.635 3.03 1.372 21.998-48.634z"/></svg>
@@ -29,44 +29,73 @@
       </div>
     </section>
     <section class="section section-work" id="work">
-      <ul class="work-list">
-        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/walkerbayshop_1x.png" alt="Walker Bay Shop online store home page" />
+      <div class="work">
+        <div class="work-item">
+          <div class="work-inner">
+            <div class="work-screenshot">
+              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+              <img class="work-screenshot-img" src="img/walkerbayshop_1x.png" alt="Walker Bay Shop online store home page" />
+            </div>
+            <div class="work-information">
+              <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
+              <p class="work-role">WooCommerce and WordPress development, all design, online payments support</p>
+              <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the work I did to support paying by credit/debit cards (with Stripe).</p>
+            </div>
           </div>
-          <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
-          <p class="work-role">WooCommerce and WordPress development, all design, online payments support</p>
-          <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the work I did to support paying by credit/debit cards (with Stripe).</p>
-        </li>
-        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/warwickboats_1x.png" alt="Warwick Boats home page" />
+        </div>
+        <div class="work-item">
+          <div class="work-inner">
+            <div class="work-screenshot">
+              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+              <img class="work-screenshot-img" src="img/warwickboats_1x.png" alt="Warwick Boats home page" />
+            </div>
+            <div class="work-information">
+              <h3 class="work-project-title">Warwick Boat Hire <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
+              <p class="work-role">WordPress development, responsive website design, photo gallery and more</p>
+              <p class="work-desc">Warwick Boat Hire is a boat hire and leisure centre located in St Nicholas Park, Warwick. I've managed their website for several years and have created custom tools, and helped their staff update conten themselves quickly with WordPress.</p>
+            </div>
           </div>
-          <h3 class="work-project-title">Warwick Boat Hire <a class="work-view-btn" href="https://warwickboats.co.uk" target="_blank">Visit</a></h3>
-          <p class="work-role">WordPress development, responsive website design, photo gallery and more</p>
-          <p class="work-desc">Warwick Boat Hire is a boat hire and leisure centre located in St Nicks Park, Warwick. For several years I've managed their website and have guided staff through the process of updating pages themselves with the aid of WordPress.</p>
-        </li>
-        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/dorightjapan_1x.png" alt="Do Right Music blog home page" />
+        </div>
+        <div class="work-item">
+          <div class="work-inner">
+            <div class="work-screenshot">
+              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+              <img class="work-screenshot-img" src="img/dorightjapan_1x.png" alt="Do Right Music blog home page" />
+            </div>
+            <div class="work-information">
+              <h3 class="work-project-title">Do Right Music <a class="work-view-btn" href="http://dorightmusic.jp" target="_blank">Japan site</a> <a class="work-view-btn" href="http://dorightmusic.com" target="_blank">Canada site</a></h3>
+              <p class="work-role">Responsive design &amp; development for two sites, localisation (for Japan site), tour dates calendar (for Canada site), social media integration</p>
+              <p class="work-desc">I worked with Do Right Music to design and launch <a href="http://dorightmusic.jp" target="_blank">Do Right Japan</a>, which is a sister site to <a href="http://dorightmusic.com" target="_blank">Do Right Canada</a>, which I've also worked on extensively. Having both on Tumblr allows fans to easily share content so musicians enjoy more exposure and it's simple for the company's staff to update.</p>
+            </div>
           </div>
-          <h3 class="work-project-title">Do Right Music <a class="work-view-btn" href="http://dorightmusic.jp" target="_blank">Japan site</a> <a class="work-view-btn" href="http://dorightmusic.com" target="_blank">Canada site</a></h3>
-          <p class="work-role">Responsive design &amp; development for two sites, localisation (for Japan site), tour dates calendar (for Canada site), social media integration</p>
-          <p class="work-desc">I worked with Do Right Music to design and launch <a href="http://dorightmusic.jp" target="_blank">Do Right Japan</a>, which is a sister site to <a href="http://dorightmusic.com" target="_blank">Do Right Canada</a>, which I've also worked on extensively. Having both on Tumblr allows fans to easily share content so musicians enjoy more exposure and it's simple for the company's staff to update.</p>
-        </li>
-        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/starbuckdriving_1x.png" alt="Starbuck Driving home page design" />
+        </div>
+        <div class="work-item">
+          <div class="work-inner">
+            <div class="work-screenshot">
+              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+              <img class="work-screenshot-img" src="img/starbuckdriving_1x.png" alt="Starbuck Driving home page design" />
+            </div>
+            <div class="work-information">
+              <h3 class="work-project-title">Starbuck Driving <a class="work-view-btn" href="http://starbuckdriving.co.uk" target="_blank">View</a></h3>
+              <p class="work-role">Responsive site design &amp; development, SEO, copy writing</p>
+              <p class="work-desc">I worked with a local driving instructor on improving his site and creating a bold new design. The rich green colours and clear typography provide visual impact, so the site leaves a lasting impression.</p>
+            </div>
           </div>
-          <h3 class="work-project-title">Starbuck Driving <a class="work-view-btn" href="http://starbuckdriving.co.uk" target="_blank">View</a></h3>
-          <p class="work-role">Responsive site design &amp; development, SEO, copy writing</p>
-          <p class="work-desc">I worked with a local driving instructor on improving his site and creating a bold new design. The rich green and clear typography provide visual impact, so the site leaves a lasting impression.</p>
-        </li>
-        <li class="work-item">
+        </div>
+        <div class="work-item">
+          <div class="work-inner">
+            <div class="work-screenshot">
+              <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
+              <img class="work-screenshot-img" src="img/heatheradams_1x.png" alt="Heather Adams web site design" />
+            </div>
+            <div class="work-information">
+              <h3 class="work-project-title">Heather Adams <a class="work-view-btn" href="http://heatheradams.co.uk" target="_blank">View</a></h3>
+              <p class="work-role">Responsive site design &amp; development, SEO</p>
+              <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p>
+            </div>
+          </div>
+        </div>
+        <!--<li class="work-item">
           <div class="work-screenshot">
             <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
             <img class="work-screenshot-img" src="img/rotaryclubofbroadlands_1x.png" alt="Rotary Club of Broadlands" />
@@ -75,16 +104,7 @@
           <p class="work-role">Responsive site deisgn, CMS integration</p>
           <p class="work-desc">I worked with a member of the RCoB to build a fully featured website they can edit easily. It clearly showcases their charity work and how they help those in need.</p>
           <p class="work-client">Client: <a href="http://dsc.net">DSC</a></p>
-        </li>
-        <li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/heatheradams_1x.png" alt="Heather Adams web site design" />
-          </div>
-          <h3 class="work-project-title">Heather Adams <a class="work-view-btn" href="http://heatheradams.co.uk" target="_blank">View</a></h3>
-          <p class="work-role">Responsive site design &amp; development, SEO</p>
-          <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p>
-        </li>
+        </li>-->
       </ul>
     </section>
     
@@ -190,7 +210,7 @@
 
     <section class="section section-contact" id="contact">
       <div class="email-container">
-        <a class="typeform-share button email" href="https://edadams.typeform.com/to/JI3B4p" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">Contact me now</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+        <a class="typeform-share button email" href="https://edadams.typeform.com/to/JI3B4p" data-mode="popup" style="display:inline-block;text-decoration:none;color:white;cursor:pointer;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;font-weight:bold" target="_blank">Contact me now</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
       </div>
     </section>
 
