--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
         </li>-->
       </ul>
     </section>
+
+    <section class="section section-testimonials" id="testimonials">
+      <div class="testimonials">
+        <div class="testimonial">
+          <q>We're always impressed by how quick Ed is to get things done. I can honestly say Ed offers the best website services we've ever used - and we've used a few!</q>
+          <div class="from">Matt, Warwick Boats</div>
+        </div>
+        <div class="testimonial">
+          <q>I'm very satisfied with the work Ed's done for me. I trust him to know what's best for our site. His ongoing tech support (3 years and counting) has been fantastic.</q>
+          <div class="from">Rowena, Plakias Panorama</div>
+        </div>
+        <div class="testimonial">
+          <q>A hardworking developer with the energy and drive to get better with everything he does. I'm very satisfied with the work he's done with us coding designs into HTML.</q>
+          <div class="from">Jess, DSC</div>
+        </div>
+      </div>
+    </section>
     
     <section class="section section-history" id="history" style="display: none;">
       <div class="history">
@@ -125,7 +142,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">E2S</a>
-            <p class="history-item-description">In association with DSC. Current, custom, 2017+</p>
+            <p class="history-item-description">Agency: DSC. Ongoing, custom</p>
           </div>
         </div>
         <div class="history-item">
@@ -137,13 +154,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://chimeadvisors.com">Chime Advisors</a>
-            <p class="history-item-description">In association with DSC. Current, custom, 2016</p>
-          </div>
-        </div>
-        <div class="history-item">
-          <div class="history-inner">
-            <span class="history-item-title">Excellence Aviation</span>
-            <p class="history-item-description">Previous, PHP, 2016</p>
+            <p class="history-item-description">Agency: DSC. Current, custom, 2016</p>
           </div>
         </div>
         <div class="history-item">
@@ -173,31 +184,20 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
-            <p class="history-item-description">Current, several iterations and various software solutions, 2014</p>
+            <p class="history-item-description">Current, several iterations &amp; software, 2014</p>
+          </div>
+        </div>
+        <div class="history-item">
+          <div class="history-inner">
+            <a class="history-item-title" href="https://eathemes.tumblr.com">EA Themes</a>
+            <p class="history-item-description">Archived, Tumblr platform, 2014</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more...</span>
-            <p class="history-item-description">Not all of my work is listed here, such as projects that were internal or have since ceased operation.</p>
+            <p class="history-item-description">Some work not listed, like projects for internal use or that have ceased operation.</p>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section section-testimonials" id="testimonials">
-      <div class="testimonials">
-        <div class="testimonial">
-          <q>We're always impressed by how quick Ed is to get things done. I can honestly say Ed offers the best website services we've ever used - and we've used a few!</q>
-          <div class="from">Matt, Warwick Boats</div>
-        </div>
-        <div class="testimonial">
-          <q>I'm very satisfied with the work Ed's done for me. I trust him to know what's best for our site. His ongoing tech support (3 years and counting) has been fantastic.</q>
-          <div class="from">Rowena, Plakias Panorama</div>
-        </div>
-        <div class="testimonial">
-          <q>A hardworking developer with the energy and drive to get better with everything he does. I'm very satisfied with the work he's done with us coding designs into HTML.</q>
-          <div class="from">Jess, DSC</div>
         </div>
       </div>
     </section>
