--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Walker Bay Shop UK <a class="work-view-btn" href="https://walkerbayshop.uk" target="_blank">Visit</a></h3>
-              <p class="work-role">WooCommerce and WordPress development, all design, online payments support</p>
-              <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the work I did to support paying by credit/debit cards (with Stripe).</p>
+              <p class="work-role">WooCommerce and WordPress development, various design tasks, credit/debit card payment support</p>
+              <p class="work-desc">I worked with the Warwick Boats team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p>
             </div>
           </div>
         </div>
