--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
       </div>
     </section>
     
-    <section class="section section-history" id="history" style="display: none;">
+    <section class="section section-history" id="history">
       <div class="history">
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://walkerbayshop.uk">Walker Bay Shop UK</a>
-            <p class="history-item-description">Current, WordPress, 2018</p>
+            <p class="history-item-description">Current, WordPress & online store, 2018</p>
           </div>
         </div>
         <div class="history-item">
@@ -141,13 +141,13 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://walkerbayshop.uk">E2S</a>
+            <a class="history-item-title" href="https://e2s.com">E2S</a>
             <p class="history-item-description">Agency: DSC. Ongoing, custom</p>
           </div>
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="https://walkerbayshop.uk">Starbuck Driving</a>
+            <a class="history-item-title" href="https://starbuckdriving.co.uk">Starbuck Driving</a>
             <p class="history-item-description">Current, WordPress, 2017</p>
           </div>
         </div>
@@ -160,7 +160,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://dorightmusic.com">Do Right Music</a>
-            <p class="history-item-description">Current, Tumblr & social media, 2015</p>
+            <p class="history-item-description">Current, Tumblr platform, 2015</p>
           </div>
         </div>
         <div class="history-item">
@@ -184,7 +184,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="https://heatheradams.co.uk">Heather Adams</a>
-            <p class="history-item-description">Current, several iterations &amp; software, 2014</p>
+            <p class="history-item-description">Current, Jekyll SSG, 2014</p>
           </div>
         </div>
         <div class="history-item">
@@ -196,10 +196,19 @@
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more...</span>
-            <p class="history-item-description">Some work not listed, like projects for internal use or that have ceased operation.</p>
+            <p class="history-item-description">Some work isn't listed, like projects for internal use or those that have ceased operation.</p>
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="section section-prices" id="prices">
+      <p class="prices-larger">A website usually costs around £500.</p>
+      <p>Prices will vary based on the specifics of what you want, so I encourage you to get in contact with me if you'd like to work with me.</p>
+      <p>This will involve a 30&ndash;40 minute chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
+      <p>I won't charge a daily nor hourly rate if I can avoid it, as instead I prefer to quote an exact figure. You approve that before work begins, so you know exactly how much everything costs.</p>
+      <p>You don't have to pay anything until the work is completed. I will absorb any extras costs (purchasing of your domain name, hosting, email accounts, and so on) and pass that on to you later. I do this as a courtesy so your website operates smoothly without you needing to worry about the impending bills.</p>
+      <p>I'm excited to work with you next!</p>
     </section>
 
     <section class="section section-about" id="about">
@@ -218,7 +227,7 @@
       <div class="section">
         <div class="footer-credit-new">
           <p>By Ed Adams</p>
-          <p>2010 &mdash; 2018</p>
+          <p>Since 2010 and until forever!</p>
           <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy Policy</a></p>
         </div>
         <ul class="footer-social-new">
