--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Rotary Club of Broadlands</a>
+            <a class="history-item-title" href="http://rotaryclubofbroadlands.org.uk">Broadlands Rotary</a>
             <p class="history-item-description">Current, static content, 2014</p>
           </div>
         </div>
