--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
         </div>
         <div class="history-item">
           <div class="history-inner">
-            <span class="history-item-title">And more...</span>
-            <p class="history-item-description">Some work isn't listed, like projects for internal use or those that have ceased operation.</p>
+            <span class="history-item-title">And more!</span>
+            <p class="history-item-description">Some work isn't listed, like internal projects or work that's now offline.</p>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
     <section class="section section-about" id="about">
       <p>I built my first website in 2008, it wasn't much but it set me on this path. I enjoyed making it and kept making more. I'd create a fictional business or products and build up a website for it. Each one was a bit better than the last and I eventually decided to go freelance and turn making websites into my careeer.</p>
       <p>My speciality is&nbsp;front-end development, but I pride myself on offering what I call a "website package", which means you can come to me with just a couple of paragraphs of text and images to start your presence on the web and I can do the rest! Every website you saw above was made by me, either on my own or as a collaboration with a design agency.</p>
-      <p>I've been doing this for over 7 years and during that time I'm proud of everything I worked on. By far my most popular creation is <a target="_blank" href="http://eathemes.tumblr.com">EA Tumblr Themes</a>, which I made to keep my skills sharp. My themes have been installed on well over 10,000 blogs! Professionally, I've worked on some high-profile websites in affiliation with DSC, including Mumsnet and Women In Sport. Each and every single website I've worked on is one I'm very proud to put my name to.</p>
+      <p>I've been doing this for over 7 years and during that time I'm proud of everything I worked on. By far my most popular creation is <a target="_blank" href="http://eathemes.tumblr.com">EA Tumblr Themes</a>, which I made to keep my skills sharp. My themes have been installed on well over 10,000 blogs! Professionally, I've worked on some high profile websites in affiliation with the agency DSC, including work for Mumsnet. Each and every single website I've worked on is one I'm very proud to put my name to.</p>
     </section>
 
     <section class="section section-contact" id="contact">
