--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more!</span>
-            <p class="history-item-description">Some work isn't listed, like internal projects or work that's now offline.</p>
+            <p class="history-item-description">Some work isn't listed, like projects in the midst of development. Check back soon!</p>
           </div>
         </div>
       </div>
