--- a/index.html
+++ b/index.html
@@ -219,12 +219,7 @@
 
     <section class="section section-contact" id="contact">
       <div class="email-container">
-        <form name="contact" method="POST" data-netlify="true">
-          <label>Name: <input type="text" name="name" /></label>   
-          <label>Email: <input type="email" name="email" /></label>
-          <label>How can I help? <textarea name="message"></textarea></label>
-          <button type="submit">Send message</button>
-        </form>
+        <a class="typeform-share button email" href="contact.html" style="display:inline-block;text-decoration:none;color:white;cursor:pointer;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;font-weight:bold" target="_blank">Send a message</a>
       </div>
     </section>
 
