--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,10 @@
           <button class="form-submit" type="submit">Send message</button>
         </div>
         <div class="form-section form-section-disclaimer">
-          <p class="form-disclaimer">I need to store your name, email address/phone number and message, so that I can reply to you. Just so you know, your information is stored securely and privately.</p>
-        </div>
+          <div class="form-disclaimer">
+            <p class="big">Just so you know&hellip;</p>
+            <p>When you provide your information it is stored for long enough for me to respond. All information provided is stored securely and can be seen only by me.</p>
+          </div>
       </form>
     </section>
     <footer class="footer-new">
