--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <div class="form-section form-section-info">
           <label class="form-label">Email or phone number</label>
           <input class="form-input" type="text" name="info" />
-          <p class="form-info-help">If you'd like to provide both, mention in your message which method you'd prefer me to use to reply.</p>
+          <p class="form-info-help">Let me know how you prefer to be contacted.</p>
         </div>
         <div class="form-section form-section-message">
           <label class="form-label">How can I help?</label>
@@ -39,7 +39,7 @@
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
             <p class="big">Just so you know&hellip;</p>
-            <p>When you provide your information it is stored for long enough for me to respond. All information provided is stored securely and can be seen only by me.</p>
+            <p>When you provide your information it is stored for long enough for me to respond. All information is  be seen only by me and will be stored securely.</p>
           </div>
       </form>
     </section>
