--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     </section>
 
     <section class="section section-contact" id="contact">
-      <div class="email-container">
-        <a class="typeform-share button email" href="contact.html" style="display:inline-block;text-decoration:none;color:white;cursor:pointer;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;font-weight:bold" target="_blank">Send a message</a>
+      <div class="contact-button-wrapper">
+        <a class="contact-button-start" href="contact.html">Get in contact with me</a>
       </div>
     </section>
 
