--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
             <p class="big">Just so you know&hellip;</p>
-            <p>When you provide your information it is stored for long enough for me to respond. All information is  be seen only by me and will be stored securely.</p>
+            <p>When you provide your information it is stored for long enough for me to respond. All information is seen only by me and will be stored securely.</p>
           </div>
       </form>
     </section>
