--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
     <section class="section section-contact" id="contact">
       <div class="contact-button-wrapper">
-        <a class="contact-button-start" href="contact.html">Get in contact with me</a>
+        <a class="contact-button-start" href="/contact">Get in contact with me</a>
       </div>
     </section>
 
