--- a/contact.html
+++ b/contact.html
@@ -86,5 +86,6 @@
       ga('create', 'UA-31021618-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <script src="js/contact.js"></script>
   </body>
 </html>
