--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
       <form class="form-contact" name="contact" method="POST" data-netlify="true">
         <div class="form-section form-section-name">
           <label class="form-label">Your name</label>
-          <input class="form-input" type="text" name="name" /> 
+          <input class="form-input" type="text" name="name" required /> 
         </div>
         <div class="form-section form-section-info">
           <label class="form-label">Email or phone number</label>
-          <input class="form-input" type="text" name="info" />
+          <input class="form-input" type="text" name="info" required />
           <p class="form-info-help">Let me know how you prefer to be contacted.</p>
         </div>
         <div class="form-section form-section-message">
