--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@
         <div class="form-section form-section-submit">
           <button class="form-submit" type="submit">Send message</button>
         </div>
+        <div class="form-section form-section-messages">
+          <div class="form-success"><p>Sent! Thank you. I'll respond as soon as I can.</p></div>
+          <div class="form-failure"><p>Oops! Something went wrong. Please <a href="mailto:edadams101@gmail.com">email directly</a> instead.</p></div>
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
             <p class="big">Just so you know&hellip;</p>
