--- a/contact.html
+++ b/contact.html
@@ -39,11 +39,13 @@
         <div class="form-section form-section-messages">
           <div class="form-success"><p>Sent! Thank you. I'll respond as soon as I can.</p></div>
           <div class="form-failure"><p>Oops! Something went wrong. Please <a href="mailto:edadams101@gmail.com">email directly</a> instead.</p></div>
+        </div>
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
             <p class="big">Just so you know&hellip;</p>
             <p>When you provide your information it is stored for long enough for me to respond. All information is seen only by me and will be stored securely.</p>
           </div>
+        </div>
       </form>
     </section>
     <footer class="footer-new">
