--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
         </div>
         <div class="form-section form-section-disclaimer">
           <div class="form-disclaimer">
-            <p class="big">Just so you know&hellip;</p>
-            <p>When you provide your information it is stored for long enough for me to respond. All information is seen only by me and will be stored securely.</p>
+            <p class="big">Just to let you know&hellip;</p>
+            <p>When you provide your information, it is emailed to me and stored so I can respond to your enquiry. All information is visible only to me. (Under GDPR, I’m required to tell you this.)</p>
           </div>
         </div>
       </form>
