--- a/index.html
+++ b/index.html
@@ -95,16 +95,6 @@
             </div>
           </div>
         </div>
-        <!--<li class="work-item">
-          <div class="work-screenshot">
-            <div class="fake-ui"><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-circle-btn"></div><div class="fake-addr-bar"></div><div class="fake-back-btn"></div><div class="fake-next-btn"></div></div>
-            <img class="work-screenshot-img" src="img/rotaryclubofbroadlands_1x.png" alt="Rotary Club of Broadlands" />
-          </div>
-          <h3 class="work-project-title">Rotary Club of Broadlands <a class="work-view-btn" href="http://rotaryclubofbroadlands.org.uk" target="_blank">View</a></h3>
-          <p class="work-role">Responsive site deisgn, CMS integration</p>
-          <p class="work-desc">I worked with a member of the RCoB to build a fully featured website they can edit easily. It clearly showcases their charity work and how they help those in need.</p>
-          <p class="work-client">Client: <a href="http://dsc.net">DSC</a></p>
-        </li>-->
       </ul>
     </section>
 
@@ -214,7 +204,7 @@
     <section class="section section-about" id="about">
       <p>I built my first website in 2008, it wasn't much but it set me on this path. I enjoyed making it and kept making more. I'd create a fictional business or products and build up a website for it. Each one was a bit better than the last and I eventually decided to go freelance and turn making websites into my careeer.</p>
       <p>My speciality is&nbsp;front-end development, but I pride myself on offering what I call a "website package", which means you can come to me with just a couple of paragraphs of text and images to start your presence on the web and I can do the rest! Every website you saw above was made by me, either on my own or as a collaboration with a design agency.</p>
-      <p>I've been doing this as my job for over 7 years and during that time I'm proud of everything I worked on. By far my most popular creation is <a target="_blank" href="http://eathemes.tumblr.com">EA Tumblr Themes</a>, which I made to keep my skills sharp. My themes have been installed on well over 10,000 blogs! Professionally, I've worked on some high profile websites in affiliation with the agency DSC, including work for Mumsnet. Each and every single website I've worked on is one I'm very proud to put my name to.</p>
+      <p>I've been doing this as my job for eight years and during that time I'm proud of everything I worked on. By far my most popular creation is <a target="_blank" href="http://eathemes.tumblr.com">EA Tumblr Themes</a>, which I made to keep my skills sharp. My themes have been installed on well over 10,000 blogs! Professionally, I've worked on some high profile websites in affiliation with the agency DSC, including work for Mumsnet. Each and every single website I've worked on is one I'm very proud to put my name to.</p>
     </section>
 
     <section class="section section-contact" id="contact">
@@ -226,13 +216,13 @@
     <footer class="footer-new">
       <div class="section">
         <div class="footer-credit-new">
-          <p>By Ed Adams</p>
-          <p>Since 2010 and until forever!</p>
-          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy Policy</a></p>
+          <p>Handmade with love.</p>
+          <p>&copy; 2011&ndash;2019</p>
+          <p class="privacy-policy-link"><a href="privacy-policy.html">Privacy policy</a></p>
         </div>
         <ul class="footer-social-new">
           <li>
-            <a href="mailto:edadams101@gmail.com" target="_new">
+            <a href="/contact">
               <svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="social-icon social-icon-github">
                 <title>Email</title>
                 <path class="email-path1" d="M512 0c-282.77 0-512 229.23-512 512s229.23 512 512 512 512-229.23 512-512-229.23-512-512-512zM256 256h512c9.138 0 18.004 1.962 26.144 5.662l-282.144 329.168-282.144-329.17c8.14-3.696 17.006-5.66 26.144-5.66zM192 704v-384c0-1.34 0.056-2.672 0.14-4l187.664 218.942-185.598 185.598c-1.444-5.336-2.206-10.886-2.206-16.54zM768 768h-512c-5.654 0-11.202-0.762-16.54-2.208l182.118-182.118 90.422 105.498 90.424-105.494 182.116 182.12c-5.34 1.44-10.886 2.202-16.54 2.202zM832 704c0 5.654-0.762 11.2-2.206 16.54l-185.6-185.598 187.666-218.942c0.084 1.328 0.14 2.66 0.14 4v384z"></path>
